--- a/Beer-Store/template.html
+++ b/Beer-Store/template.html
@@ -12,7 +12,7 @@
     <a class="active" href="index.html">Home</a>
     <a href="all-beers.html">See All Beers</a>
     <a href="order.html">Order a Beer</a>
-    <a class="right" href="register.html">Register</a>
+    <a class="right active" href="register.html">Register</a>
     <a class="right" href="login.html"> Log in</a>
 </div>
 </nav>
