--- a/Beer-Store/register.html
+++ b/Beer-Store/register.html
@@ -31,6 +31,7 @@
 
             <input type="submit" value="Register">
         </form>
+        <a href="index.html"> Back to Index</a>
     </center>
 </main>
 
